--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "devDependencies": {
         "tap-spec": "^5.0.0"
     },
-    "main": "./src/index.ts",
+    "main": "./out/index.js",
     "scripts": {
         "build": "tsc",
         "test": "nyc --reporter=lcov --require ts-node/register tape ./tests/*.ts | tap-spec; nyc report ---reporter=text",
