Beef up compile and admnistrivia
add tsmon/nodemon.

For now we'll say a signatureHelp is the same as get type definition

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "main": "./out/index.js",
     "scripts": {
         "build": "tsc",
+	"watch": "tsc --build --watch",
         "test": "nyc --reporter=lcov --require ts-node/register tape ./tests/*.ts | tap-spec; nyc report ---reporter=text",
         "prepublish": "npm run build"
     }
