--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,13 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 
-[./{src,tests}/*.ts]
+[./src/*.ts]
+trim_trailing_whitespace = true
+insert_final_newline = true
+indent_style = space
+indent_size = 2
+
+[./tests/*.ts]
 trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
