--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "build": "tsc",
         "watch": "tsc --build --watch",
         "test": "nyc --reporter=lcov --require ts-node/register tape ./tests/*.ts | tap-spec; nyc report ---reporter=text",
-        "prepublish": "npm run build"
+        "prepublish": "npm run build",
+        "postinstall": "bash ./post-install.sh"
     }
 }
