--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "url": "https://github.com/rocky/solc-lsp"
     },
     "dependencies": {
+        "@types/vscode": "^1.36.0",
+        "keccak": "^1.0.2",
         "@types/tape": "^4.2.33",
         "nyc": "^13.3.0",
         "solc": "^0.5.10",
@@ -24,7 +26,6 @@
         "build": "tsc",
         "watch": "tsc --build --watch",
         "test": "nyc --reporter=lcov --require ts-node/register tape ./tests/*.ts | tap-spec; nyc report ---reporter=text",
-        "prepublish": "npm run build",
-        "postinstall": "bash ./post-install.sh"
+        "prepare": "npm run build"
     }
 }
