--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,20 +4,28 @@
 {
     "compilerOptions": {
 	/* Basic Options */
-	"module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+	"module": "commonjs",
 	"target": "es6",
+	"experimentalDecorators": true,   /* decorators on functions, e.g. for memoizing function get */
+	"esModuleInterop": true,
 	"outDir": "./out",
 	"rootDir": "./src",
-	"lib": ["es6"],
-	"declaration": true,                      /* Generates corresponding '.d.ts' file. */
-	"sourceMap": true,                        /* Generates corresponding '.map' file. */
-	"esModuleInterop": true,                  /* Needed for exports as ts-node */
+	"moduleResolution": "node",
+        "lib": [
+            "es6",
+            "dom"
+        ],
 	/* Strict Type-Checking Options */
-	"strict": true,                           /* Enable all strict type-checking options. */
+	"strict": true,
 	"noImplicitAny": false,                   /* Raise error on expressions and declarations with an implied 'any' type. */
+        "newLine": "LF",
+	"sourceMap": true,
+	"allowJs": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
 	/* Module Resolution Options */
-	"baseUrl": "./src",                       /* Base directory to resolve non-absolute module names. */
-    },
+	"baseUrl": "./src",
+	},
     "include": ["src"],
     "exclude": ["node_modules", ".vscode-test"]
 }
