--- a/src/solc-ast/Makefile
+++ b/src/solc-ast/Makefile
@@ -1,4 +1,8 @@
 # Whatever it is you want to do, it should be forwarded to the
 # to top-level directories
+.PHONY: build all check test
+build:
+	$(MAKE) -C .. $@
+
 %:
 	$(MAKE) -C ../.. $@
