Better FileIndex tracking.
Add textFromSrc()

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 # Whatever it is you want to do, it should be forwarded to the
 # to top-level directories
-.PHONY: build all check test
+.PHONY: build
 build:
 	$(MAKE) -C .. $@
 
