Reconcile solc InputOptions and truffle config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
 	"moduleResolution": "node",
         "lib": [
             "es6",
-            "es2016", /* Adds Array<string>.includes */
-            "dom"
+            "es2017", /* Adds Array<string>.includes */
+            "dom",
         ],
 	/* Strict Type-Checking Options */
 	"strict": true,
