--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "url": "https://github.com/rocky/solc-lsp"
     },
     "dependencies": {
+        "detect-installed": "^2.0.4",
+        "get-installed-path": "^4.0.8",
         "keccak": "^1.0.2",
         "solc": "^0.5.10",
         "truffle-compile": "^4.1.5",
