--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,12 @@
 # Whatever it is you want to do, it should be forwarded to the
 # to top-level directories
+.PHONY: build check
+
+build:
+	$(MAKE) -C .. $@
+
+check: build
+	$(MAKE) -C .. $@
+
 %:
 	$(MAKE) -C .. $@
