--- a/src/solc-ast/Makefile
+++ b/src/solc-ast/Makefile
@@ -1,7 +1,10 @@
 # Whatever it is you want to do, it should be forwarded to the
 # to top-level directories
-.PHONY: build
+.PHONY: build check
 build:
+	$(MAKE) -C .. $@
+
+check: build
 	$(MAKE) -C .. $@
 
 %:
