--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "main": "./out/index.js",
     "scripts": {
         "build": "tsc --build",
-        "cover:report": "nyc report --reporter=text",
+        "coverage:text": "nyc report --reporter=text",
+        "coverage:html": "nyc report --reporter=html",
         "watch": "tsc --build --watch",
-        "test": "nyc --reporter=lcov --require ts-node/register tape ./tests/*.ts | tap-spec",
+        "test": "nyc --reporter=lcov --require ts-node/register tape ./tests/test-*.ts | tap-spec",
         "prepare": "npm run build"
     }
 }
