Try adding CircleCI batch and coveralls report

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "build": "tsc --build",
         "coverage:text": "nyc report --reporter=text",
         "coverage:html": "nyc report --reporter=html",
+	"coveralls": "nyc report --reporter=text-lcov | coveralls",
         "watch": "tsc --build --watch",
         "test": "nyc --reporter=lcov --require ts-node/register tape ./tests/test-*.ts | tap-spec",
         "prepare": "npm run build"
