--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,15 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           - v1-dependencies-
 
-      - run: npm install
+      - run:
+          name: Install dependent npm packages
+          command: npm install
       - run:
           name: Run tests
           command: npm test
       - run:
           name: Send coverage report
-          command: if [ -z "$CIRCLE_PR_USERNAME" ]; then npm run coverage:html; fi
+          command: npm run coveralls
 
       - save_cache:
           paths:
