--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.2
 
 defaults: &defaults
   working_directory: ~/repo
@@ -22,6 +24,9 @@ jobs:
       - run:
           name: Run tests
           command: npm test
+
+      - codecov/upload:
+          file: {{ coverage_report_filepath }}
 
       - save_cache:
           paths:
