--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,55 +1,27 @@
-version: 2.1
-orbs:
-  codecov: codecov/codecov@1.0.2
-
-defaults: &defaults
-  working_directory: ~/repo
-  docker:
-    - image: circleci/node:10.16
-
+version: 2
 jobs:
-  test:
-    <<: *defaults
+  build:
+    docker:
+      - image: circleci/node:10.14.2
+    working_directory: ~/repo
     steps:
       - checkout
 
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
+          - v2-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v2-dependencies-
 
       - run:
           name: Install dependent npm packages
           command: npm install
-      - run:
-          name: Run tests
-          command: npm test
-
-      - codecov/upload:
-          file: {{ coverage_report_filepath }}
 
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v2-dependencies-{{ checksum "package.json" }}
 
-      - persist_to_workspace:
-          root: ~/repo
-          paths: .
-
-workflows:
-  version: 2
-  test-deploy:
-    jobs:
-      - test:
-          filters:
-            tags:
-              only: /^v.*/
-      - deploy:
-          requires:
-            - test
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
+      - run:
+          name: Run tests
+          command: npm test
